Fixed stats spacing

--- a/style.scss
+++ b/style.scss
@@ -83,6 +83,7 @@ body {
       flex-direction: column;
       justify-content: center;
       align-items: center;
+      flex:1;
     }
     .stat-number {
       font-weight: bold;
